# Aio-cookies

./: .env.example  .gitignore  README.md  bot.py  cookie_checker.py  pyproject.toml  requirements.txt
cookiescanner/: README.md  __init__.py  cli.py  cookies.py  http.py  scanner.py  types.py
cookiescanner/sites/: __init__.py  base.py  blackbox.py  facebook.py  manus.py  netflix.py  perplexity.py  prime.py  roblox.py  shopify.py  spotify.py
examples/: cookies.example.header  cookies.example.json  cookies.example.txt
tests/: test_branding.py  test_cookie_checker.py  test_cookies.py  test_dashboard.py  test_roblox_refresh.py
tgbot/: __init__.py  bot.py  config.py  dashboard.py  formatting.py  handlers.py  scanner.py  storage.py
